# AI-Platform-Square-HB

./: .env.example  .env.local.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  check_db.py  check_ranking.py  fix_and_sync.py  fix_declared_at.py  init_db.py  pyproject.toml  requirements.txt  verify_data.py
backend/alembic/: env.py
backend/app/: auth_utils.py  bootstrap.py  config.py  database.py  dependencies.py  domain.py  identity.py  main.py  models.py  schemas.py  seed.py  validators.py  venv_utils.py
backend/app/routers/: apps.py  (+12 more)
backend/migrations/: 001_init.sql  002_add_run_id_to_historical_rankings.sql  003_add_ranking_audit_logs.sql  004_add_uniqueness_guards.sql  005_add_detail_doc_fields.sql  006_add_submission_manage_token.sql  007_add_auth_rbac_tables.sql  008_add_submission_app_user_audit_fields.sql  009_add_ranking_config_to_dimension_scores.sql  010_add_submission_monthly_calls_and_difficulty.sql  migrate_sqlite_to_mysql.py
backend/scripts/: README.md  check_data.py  check_dimensions.py  check_trend_ranking.py  debug_sync.py  dedupe_data.py  fix_rankings.py  test_sync.py
backend/tests/: conftest.py  helpers.py  test_api.py  test_auth_utils.py  test_bootstrap.py  test_config_validation.py  test_data_integrity.py  test_date_hints.py  test_dependencies.py  test_imports.py  test_phase4_regression_lock.py  test_ranking_consistency.py  test_ranking_service.py  test_runtime_paths.py  test_schema_model_default_alignment.py  test_schemas_optional_nullable.py  test_submission_service.py
(+159 files in other folders)
